<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>

    <string name="titleTextView">My Nanodegree Apps!</string>
    <string name="project0Button">Spotify Streamer</string>
    <string name="project1Button">Football Scores App</string>
    <string name="project2Button">Library App</string>
    <string name="project3Button">Build It Bigger</string>
    <string name="project4Button">Bacon Reader</string>
    <string name="project5Button">Capstone: My Own App</string>
</resources>
