<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:background="#dfeaf1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titleTextView"
        android:text="@string/titleTextView"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/titleTextView">

        <Button
            android:id="@+id/project0Button"
            style="@style/Buttons"
            android:text="@string/project0Button"
            android:onClick="project0Button" />

        <Button
            android:id="@+id/project1Button"
            style="@style/Buttons"
            android:text="@string/project1Button"
            android:onClick="project1Button" />

        <Button
            android:id="@+id/project2Button"
            style="@style/Buttons"
            android:text="@string/project2Button"
            android:onClick="project2Button" />

        <Button
            android:id="@+id/project3Button"
            style="@style/Buttons"
            android:text="@string/project3Button"
            android:onClick="project3Button" />

        <Button
            android:id="@+id/project4Button"
            style="@style/Buttons"
            android:text="@string/project4Button"
            android:onClick="project4Button" />

        <Button
            android:id="@+id/project5Button"
            style="@style/Buttons"
            android:text="@string/project5Button"
            android:onClick="project5Button"
            android:background="#f44336"
            android:textColor="#ffffff" />
    </LinearLayout>
</RelativeLayout>
